# BenCrypto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
crypto/: CMakeLists.txt  crypto.hpp  crypto_CRC32.hpp
crypto/cmake/: ConfigureBoost.cmake  ConfigureOpenSSL.cmake
crypto/utils/: banned.h
tests/: CMakeLists.txt  main.cpp  test_crypto.cpp  test_crypto_CRC.cpp
tests/cmake/: ConfigureBoost.cmake  ConfigureOpenSSL.cmake
